--- a/src/components/SectionWrapper/SectionWrapper.module.css
+++ b/src/components/SectionWrapper/SectionWrapper.module.css
@@ -61,8 +61,9 @@
 @media only screen and (max-width: 600px) {
   .section-container {
     align-items: center;
+    margin: 0;
     width: unset;
-    max-width: 100%;
+    max-width: 100dvw;
     overflow-x: hidden;
     border-radius: 0;
   }
